Weather api is integrated using axios

--- a/appspec.yml
+++ b/appspec.yml
@@ -12,3 +12,7 @@ permissions:
     type:
       - file
       - directory
+hooks:
+  ApplicationStart:
+  - location: deployscript/application-start-hook.sh 
+    timeout: 300 
