--- a/buildspec.yml
+++ b/buildspec.yml
@@ -20,4 +20,6 @@ artifacts:
   # notably excluded is node_modules, as this will cause overwrite error on deploy
   files:
     - "./**/*"
+    - "appspec.yml"
+    - "build/reactjs/**/*"
   base-directory: build
