--- a/buildspec.yml
+++ b/buildspec.yml
@@ -21,5 +21,5 @@ artifacts:
   files:
     - "./**/*"
     - appspec.yml
-    - "build/reactjs/**/*"
-  base-directory: build/reactjs
+    - "build/**/*"
+  base-directory: build
