--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,5 +1,8 @@
 version: 0.2
-
+env:
+  secrets-manager:
+    DOCKER_TOKEN: dockerhub:token
+    DOCKER_USERNAME: dockerhub:user
 phases:
   pre_build:
     commands:
